welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:22: error: ')' expected but integer literal found.
for ( 1<- to 4 )
             ^PictureMono:27: error: illegal start of simple expression
}
^